--- a/style/userstyles.css
+++ b/style/userstyles.css
@@ -11,8 +11,8 @@ html {
 
 /* PAGE */
 .container {
-  min-height: 100vh;
-  padding: 4rem;
+  height: 100vh;
+  padding: 1rem 4rem 4rem 4rem;
   background: linear-gradient(360deg, #0a152e 0%, #bfcce8 100%);
   display: flex;
   flex-direction: column;
@@ -23,11 +23,11 @@ header {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-bottom: 10rem;
+  margin-bottom: 4rem;
 }
 
 .title {
-  font-size: 4.8rem;
+  font-size: 4rem;
   margin: 0;
   display: block;
 }
@@ -38,6 +38,13 @@ header {
   display: block;
 }
 
+.header{
+  width: 100%;
+  margin-bottom: 8rem;
+  display: flex;
+  justify-content: right;
+}
+
 .primary-btn {
   background: #0a152e;
   color: white;
@@ -46,16 +53,13 @@ header {
   cursor: pointer;
   padding: 1.2rem 2.4rem;
   border: none;
-  position: absolute;
-  top: 0.5rem;
-  right: 5rem;
 }
 
 /* MAIN */
 section {
   display: flex;
   gap: 3.5rem;
-  height: 100%;
+  height: 80vh;
 }
 
 /* PANELS */
@@ -65,13 +69,13 @@ section {
   border-radius: 1.6rem;
   padding: 2rem;
   box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.08);
+  height: 100%;
 }
 
 .right-panel {
   padding: 5rem;
   text-align: center;
   flex-grow: 1;
-  position: relative;
 }
 
 .left-panel {
@@ -231,9 +235,9 @@ label {
 
 /*Help Overlay */
 .help-btn {
-  position: absolute;
-  transform: translate(0,50%);
-  right:0.5rem;
+  position: fixed;
+  right: 4.5rem;
+  bottom: 4.5rem;
   width: 5.6rem;
   height: 5.6rem;
   border-radius: 50%;
@@ -371,7 +375,7 @@ label {
   gap: 1rem;
   flex: 1;
   overflow-y: auto;
-  min-height: 0;
+  height: 100%;
 }
 
 .queue-name {
@@ -518,7 +522,7 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -528,13 +532,13 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
 @media (min-width: 1125px) and (max-width: 1299px) {
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -544,7 +548,7 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -554,7 +558,7 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -564,7 +568,7 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -574,7 +578,7 @@ label {
   }
 
   .left-panel{
-    height: 50rem;
+    height: 100%;
   }
 }
 
@@ -588,13 +592,26 @@ label {
     flex: 1;
   }
 
+  .container {
+    height: 120vh;
+    padding: 1rem 4rem 4rem 4rem;
+    background: linear-gradient(360deg, #0a152e 0%, #bfcce8 100%);
+    display: flex;
+    flex-direction: column;
+  }
+
   .left-panel {
     width: 100%;
     flex-grow: 1;
   }
 
+  .header{
+    margin-top: 2rem;
+  }
+
   .right-panel {
     width: 100%;
+    height: 50rem;
     padding: 3rem;
     flex-grow: 0;
   }
